WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311023
Reversed ASSERT_ENABLED check in assertRowIsInTable()
https://bugs.webkit.org/show_bug.cgi?id=311023
Summary
Reversed ASSERT_ENABLED check in assertRowIsInTable()
Chris Dumez
Reported
2026-03-29 05:35:31 PDT
Reversed ASSERT_ENABLED check in assertRowIsInTable().
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-29 05:37:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61617
EWS
Comment 2
2026-03-29 17:41:27 PDT
Committed
310191@main
(bebb85b88f92): <
https://commits.webkit.org/310191@main
> Reviewed commits have been landed. Closing PR #61617 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-29 17:42:13 PDT
<
rdar://problem/173650599
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug