Cherry-pick 310191@main (bebb85b88f92). https://bugs.webkit.org/show_bug.cgi?id=311023

Reversed ASSERT_ENABLED check in assertRowIsInTable()
    https://bugs.webkit.org/show_bug.cgi?id=311023

    Reviewed by Anne van Kesteren.

    This was clearly inverted. When ASSERT_ENABLED is true (debug builds),
    the function is a no-op via UNUSED_PARAM. When ASSERT_ENABLED is false
    (release builds), the ASSERT macros are present but compile to nothing.
    The assertions never execute in any build configuration.

    * Source/WebCore/html/HTMLTableRowsCollection.cpp:
    (WebCore::assertRowIsInTable):

    Canonical link: https://commits.webkit.org/310191@main

Canonical link: https://commits.webkit.org/298234.523@webkitglib/2.50